# Nekoframe

./: README.md  package-lock.json  package.json
src/: index.html  script.js  stats.css  stats.html  stats.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
